Finally a solution. Man I'm bad at mapping.

--- a/Puzzles/Puzzles.csproj
+++ b/Puzzles/Puzzles.csproj
@@ -32,6 +32,12 @@
     <None Update="Puzzle 7\input.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Puzzle 8\input-example.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Puzzle 8\input.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
